ACLOCAL_AMFLAGS=-I m4

pkgconfigdir = $(libdir)/pkgconfig
INTERFACE_VERSION=3.0

if ENABLE_GTK3
%-$(INTERFACE_VERSION).pc: %.pc
	 cp $< $@

pkgconfig_in_files =					\
	evolution-calendar-$(INTERFACE_VERSION).pc	\
	evolution-mail-$(INTERFACE_VERSION).pc		\
	evolution-plugin-$(INTERFACE_VERSION).pc	\
	evolution-shell-$(INTERFACE_VERSION).pc
pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=-$(INTERFACE_VERSION).pc)
else
pkgconfig_DATA = 				\
	evolution-calendar.pc			\
	evolution-mail.pc			\
	evolution-plugin.pc			\
	evolution-shell.pc
endif

EXTRA_DIST = 			\
	$(pkgconfig_DATA)	\
	AUTHORS			\
	COPYING-DOCS		\
	COPYING.LGPL2		\
	COPYING.LGPL3		\
	COPYING.OPENLDAP	\
	README			\
	HACKING			\
	MAINTAINERS		\
	NEWS			\
	NEWS-1.0		\
	marshal.mk		\
	iconv-detect.c		\
	plugin.mk		\
	intltool-merge.in	\
	intltool-update.in	\
	intltool-extract.in	\
	evolution-zip.in	\
	gnome-doc-utils.make    \
	gtk-doc.make

if ENABLE_SMIME
SMIME_SUBDIR=smime
endif

if WITH_HELP
HELP_SUBDIR=help
endif

# For maintainers only.
if GLADE_CATALOG
MAINT_SUBDIR=maint
endif

SUBDIRS = 			\
	m4			\
	data			\
	smclient		\
	libart_lgpl		\
	libgnomecanvas		\
	e-util			\
	a11y			\
	filter			\
	widgets			\
	shell			\
	$(SMIME_SUBDIR)		\
	em-format		\
	addressbook		\
	composer		\
	mail			\
	calendar		\
	capplet			\
	art			\
	plugins			\
	modules			\
	$(MAINT_SUBDIR)		\
	doc			\
	ui			\
	views			\
	po			\
	sounds			\
	$(HELP_SUBDIR)

if ENABLE_GTK3
DISTCLEANFILES = 			\
	$(builddir)/iconv-detect.h	\
	$(pkgconfig_in_files)
else
DISTCLEANFILES = 			\
	$(builddir)/iconv-detect.h
endif

MAINTAINERCLEANFILES =			\
	$(srcdir)/INSTALL		\
	$(srcdir)/aclocal.m4		\
	$(srcdir)/autoscan.log		\
	$(srcdir)/compile		\
	$(srcdir)/config.guess		\
	$(srcdir)/config.h.in		\
	$(srcdir)/config.sub		\
	$(srcdir)/configure.scan	\
	$(srcdir)/depcomp		\
	$(srcdir)/install-sh		\
	$(srcdir)/ltmain.sh		\
	$(srcdir)/missing		\
	$(srcdir)/mkinstalldirs		\
	$(srcdir)/gnome-doc-utils.make	\
	$(srcdir)/gtk-doc.make		\
	$(srcdir)/m4/gnome-doc-utils.m4	\
	$(srcdir)/m4/gtk-doc.m4		\
	$(srcdir)/m4/intltool.m4	\
	$(srcdir)/m4/libtool.m4		\
	$(srcdir)/m4/ltoptions.m4	\
	$(srcdir)/m4/ltsugar.m4		\
	$(srcdir)/m4/ltversion.m4	\
	$(srcdir)/m4/lt~obsolete.m4

# Scrollkeeper must be disabled for distcheck to work because
# distcheck uses a custom prefix.  See GNOME bug #354357.
DISTCHECK_CONFIGURE_FLAGS =		\
	--disable-gtk3			\
	--enable-gtk-doc		\
	--disable-scrollkeeper		\
	--enable-test-component		\
	--disable-image-inline		\
	--disable-weather		\
	--with-help

# Generate a ChangeLog file from 'git log'
dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat \
		  EVOLUTION_2_30_0..) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

-include $(top_srcdir)/git.mk
